Added fonts correctly,  getting used to tailwind v4

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <title>Scott Peat - Web3 Full Stack Developer</title>
   </head>
-  <body class="font-opensans">
+  <body class="font-Raleway">
     <header class="container mx-auto mt-10 px-6 text-center h-40 md:h-20">
       <!-- Logo -->
       <div class="h-20 w-48 mx-auto md:mx-0 md:absolute top-10 left-10">
@@ -30,6 +30,10 @@
         <!-- Dark/Light Mode Button -->
       </div>
     </header>
-    <section id="hero"></section>
+    <section id="hero">
+      <div class="container-mx-auto px-6 text-center md:pt-20 pb-52">
+        Scott Peat
+      </div>
+    </section>
   </body>
 </html>
