Playing out design ideas in tailwind

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
       </div>
     </header>
     <section id="hero">
-      <div class="container-mx-auto px-6 text-center md:pt-20 pb-52">
-        Scott Peat
+      <div
+        class="container-mx-auto px-6 text-center md:pt-20 pb-52 border-8 border-amber-500"
+      >
+        <h2 class="font-bold">Scott Peat - Web3 Full Stack Developer</h2>
       </div>
     </section>
   </body>
